src/test/deca/context/invalid/If_then_elseInvalide.deca
// Description:
//    condition
//
// Resultats:
//    Ligne 10: la condition doit être booléen.
// 
// Historique:
//    cree le 13/01/2023
{
	if (5){
	}
}
